--- a/templates/web/data_entry_officer_signup.html
+++ b/templates/web/data_entry_officer_signup.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Signup Page | Customer</title>
+	<title>Signup Page | Staff</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->	
